REOPENED160587
Write API test to cover crash fix in r204135
https://bugs.webkit.org/show_bug.cgi?id=160587
Summary Write API test to cover crash fix in r204135
Chris Dumez
Reported 2016-08-04 19:54:12 PDT
Write API test to cover crash fix in r204135. One way I managed to reproduce was by destroying another WKWebView sharing the same WebContent process in the webViewWebContentProcessDidTerminate callback.
Attachments
Patch (5.65 KB, patch)
2016-08-04 20:26 PDT, Chris Dumez
no flags
Patch (6.77 KB, patch)
2016-08-07 11:15 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2016-08-04 20:26:15 PDT
Chris Dumez
Comment 2 2016-08-04 20:26:55 PDT
Was a pain to reproduce but I finally managed.
WebKit Commit Bot
Comment 3 2016-08-06 08:14:51 PDT
Comment on attachment 285397 [details] Patch Clearing flags on attachment: 285397 Committed r204226: <http://trac.webkit.org/changeset/204226>
WebKit Commit Bot
Comment 4 2016-08-06 08:14:55 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 5 2016-08-06 21:17:31 PDT
This broke 7 API tests: https://build.webkit.org/builders/Apple%20El%20Capitan%20Debug%20WK2%20%28Tests%29/builds/7163/steps/run-api-tests/logs/stdio Tests that failed: WKNavigation.WebContentProcessDidTerminate WebKit2.GetPIDAfterAbortedProcessLaunch WebKit2.LoadPageAfterCrash WebKit2.MouseMoveAfterCrash WebKit2.ReloadPageAfterCrash WebKit2.ResizeWindowAfterCrash WebKit2.RestoreShouldOpenExternalURLsPolicyAfterCrash
Chris Dumez
Comment 6 2016-08-06 21:23:04 PDT
Reverted r204226 for reason: Broke some API tests Committed r204238: <http://trac.webkit.org/changeset/204238>
Chris Dumez
Comment 7 2016-08-06 21:24:43 PDT
(In reply to comment #5) > This broke 7 API tests: > https://build.webkit.org/builders/ > Apple%20El%20Capitan%20Debug%20WK2%20%28Tests%29/builds/7163/steps/run-api- > tests/logs/stdio > > Tests that failed: > WKNavigation.WebContentProcessDidTerminate > WebKit2.GetPIDAfterAbortedProcessLaunch > WebKit2.LoadPageAfterCrash > WebKit2.MouseMoveAfterCrash > WebKit2.ReloadPageAfterCrash > WebKit2.ResizeWindowAfterCrash > WebKit2.RestoreShouldOpenExternalURLsPolicyAfterCrash Thanks for letting me know. I rolled out for now until I get a chance to investigate.
Chris Dumez
Comment 8 2016-08-07 10:29:41 PDT
Comment on attachment 285397 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=285397&action=review > Source/WebKit2/UIProcess/WebProcessProxy.cpp:807 > + didClose(*connection()); Looks like the issue was that didClose() already calls shutDown(), and we are calling shutDown() again below. We would hit an assertion because shutDown() was called twice.
Chris Dumez
Comment 9 2016-08-07 11:15:01 PDT
Chris Dumez
Comment 10 2016-08-07 11:15:27 PDT
Fixed the assertion hits in debug builds. It now passes all the tests in Debug as well.
WebKit Commit Bot
Comment 11 2016-08-07 12:09:26 PDT
Comment on attachment 285529 [details] Patch Clearing flags on attachment: 285529 Committed r204243: <http://trac.webkit.org/changeset/204243>
WebKit Commit Bot
Comment 12 2016-08-07 12:09:32 PDT
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 13 2016-08-23 11:11:07 PDT
Reverted r204243 for reason: Caused some layout test failures Committed r204841: <http://trac.webkit.org/changeset/204841>
Note You need to log in before you can comment on or make changes to this bug.