Write API test to cover crash fix in r204135 https://bugs.webkit.org/show_bug.cgi?id=160587

Reviewed by Darin Adler.

Source/WebKit2:

Call didClose() in WebProcessProxy::requestTermination() so that
the processDidCrash() delegates get called in API tests whenever
a WebContent process is terminated to simulate a crash.

* UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::requestTermination):

Tools:

Add API test to cover crash fix in r204135. This reproduces the crash
by destroying a related WKWebView in the webViewWebContentProcessDidTerminate
callback.

* TestWebKitAPI/Tests/WebKit2Cocoa/Navigation.mm:
(-[NavigationDelegate webViewWebContentProcessDidTerminate:]):
(TEST):


Canonical link: https://commits.webkit.org/178759@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204226 268f45cc-cd09-0410-ab3c-d52691b4dbfc